[fixes #17796697] classification arrows aligned

--- a/app/stylesheets/partials/_coding_page.sass
+++ b/app/stylesheets/partials/_coding_page.sass
@@ -32,7 +32,7 @@ body #content #main .activity_tree a
   position: relative
 
 #expl
-  color: $primary
+  color: $mid-blue
   float: right
   position: absolute
   right: 15px
@@ -50,6 +50,7 @@ body #content #main .activity_tree a
         padding-left: 3px
       img
         float: left
+        
     &.spend
       float: left
       width: 153px
@@ -63,7 +64,7 @@ body #content #main .activity_tree a
     border: 1px solid $primary_light
     float: left
     opacity: 0.7
-    padding: 3px 6px
+    padding: 2px 5px
     +border-radius
     &:hover
       opacity: 1
@@ -72,7 +73,7 @@ body #content #main .activity_tree a
     text-decoration: none
     
   img
-    margin: 0 3px
+    margin: 0 2px
 
 .inline_ratio
   display: inline-block !important
